k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rib
  labels:
    name: rib
    app: rib
